disable rewrites for installer in .htaccess

--- a/.htaccess
+++ b/.htaccess
@@ -43,7 +43,7 @@ ErrorDocument 403 /index.php
    RewriteCond %{REQUEST_FILENAME} !-f
    RewriteCond %{REQUEST_FILENAME} !-d
    RewriteCond %{REQUEST_FILENAME} !-l
-   RewriteCond %{REQUEST_URI} !=/favicon.ico
+   RewriteCond %{REQUEST_URI} !^/favicon.ico
    RewriteRule ^(.*) index.php [L]
 </IfModule>
 
