--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -15,7 +15,8 @@ AcceptPathInfo On
    RewriteCond %{REQUEST_FILENAME} !-f
    RewriteCond %{REQUEST_FILENAME} !-d
    RewriteCond %{REQUEST_FILENAME} !-l
-   RewriteCond %{REQUEST_URI} !=/favicon.ico
+   RewriteCond %{REQUEST_URI} !^/favicon.ico
+   RewriteCond %{REQUEST_URI} !^/install.php
    RewriteRule ^(.*) index.php [L]
 </IfModule>
 
