--- a/.htaccess
+++ b/.htaccess
@@ -23,17 +23,17 @@ ErrorDocument 403 /index.php
 #   name of your production site.
 #
 #
-#   RewriteCond %{SERVER_NAME} ^my.fqdn.com$
+#   RewriteCond %{SERVER_NAME} ^my\.fqdn\.com$
 #   RewriteCond %{REQUEST_METHOD} ^GET$
 #   RewriteCond %{DOCUMENT_ROOT}/cache/pages%{REQUEST_URI} -f
 #   RewriteRule ^(.*)$ /cache/pages/$1 [L]
 #
-#   RewriteCond %{SERVER_NAME} ^my.fqdn.com$
+#   RewriteCond %{SERVER_NAME} ^my\.fqdn\.com$
 #   RewriteCond %{REQUEST_METHOD} ^GET$
 #   RewriteCond %{DOCUMENT_ROOT}/cache/pages%{REQUEST_URI}.html -f
 #   RewriteRule ^(.*)$ /cache/pages/$1.html [L]
 #
-#   RewriteCond %{SERVER_NAME} ^my.fqdn.com$
+#   RewriteCond %{SERVER_NAME} ^my\.fqdn\.com$
 #   RewriteCond %{REQUEST_METHOD} ^GET$
 #   RewriteCond %{DOCUMENT_ROOT}/cache/pages%{REQUEST_URI} -d
 #   RewriteCond %{DOCUMENT_ROOT}/cache/pages%{REQUEST_URI}index.html -f
@@ -44,17 +44,17 @@ ErrorDocument 403 /index.php
 #   domain name of your staging site.
 #
 #
-#   RewriteCond %{SERVER_NAME} ^staging.my.fqdn.com$
+#   RewriteCond %{SERVER_NAME} ^staging\.my\.fqdn\.com$
 #   RewriteCond %{REQUEST_METHOD} ^GET$
 #   RewriteCond %{DOCUMENT_ROOT}/cache/pages.staging%{REQUEST_URI} -f
 #   RewriteRule ^(.*)$ /cache/pages.staging/$1 [L]
 #
-#   RewriteCond %{SERVER_NAME} ^staging.my.fqdn.com$
+#   RewriteCond %{SERVER_NAME} ^staging\.my\.fqdn\.com$
 #   RewriteCond %{REQUEST_METHOD} ^GET$
 #   RewriteCond %{DOCUMENT_ROOT}/cache/pages.staging%{REQUEST_URI}.html -f
 #   RewriteRule ^(.*)$ /cache/pages.staging/$1.html [L]
 #
-#   RewriteCond %{SERVER_NAME} ^staging.my.fqdn.com$
+#   RewriteCond %{SERVER_NAME} ^staging\.my\.fqdn\.com$
 #   RewriteCond %{REQUEST_METHOD} ^GET$
 #   RewriteCond %{DOCUMENT_ROOT}/cache/pages.staging%{REQUEST_URI} -d
 #   RewriteCond %{DOCUMENT_ROOT}/cache/pages.staging%{REQUEST_URI}index.html -f
@@ -65,17 +65,17 @@ ErrorDocument 403 /index.php
 #   domain name of your development site.
 #
 #
-#   RewriteCond %{SERVER_NAME} ^dev.my.fqdn.com$
+#   RewriteCond %{SERVER_NAME} ^dev\.my\.fqdn\.com$
 #   RewriteCond %{REQUEST_METHOD} ^GET$
 #   RewriteCond %{DOCUMENT_ROOT}/cache/pages.dev%{REQUEST_URI} -f
 #   RewriteRule ^(.*)$ /cache/pages.dev/$1 [L]
 #
-#   RewriteCond %{SERVER_NAME} ^dev.my.fqdn.com$
+#   RewriteCond %{SERVER_NAME} ^dev\.my\.fqdn\.com$
 #   RewriteCond %{REQUEST_METHOD} ^GET$
 #   RewriteCond %{DOCUMENT_ROOT}/cache/pages.dev%{REQUEST_URI}.html -f
 #   RewriteRule ^(.*)$ /cache/pages.dev/$1.html [L]
 #
-#   RewriteCond %{SERVER_NAME} ^dev.my.fqdn.com$
+#   RewriteCond %{SERVER_NAME} ^dev\.my\.fqdn\.com$
 #   RewriteCond %{REQUEST_METHOD} ^GET$
 #   RewriteCond %{DOCUMENT_ROOT}/cache/pages.dev%{REQUEST_URI} -d
 #   RewriteCond %{DOCUMENT_ROOT}/cache/pages.dev%{REQUEST_URI}index.html -f
